# tiny_compiler

./: CMakeLists.txt
include/: AST.hpp  Lexer.hpp  Parser.hpp  SymbolTable.hpp
src/: Lexer.cpp  Parser.cpp  main.cpp
